--- a/WineShop/WineShop.csproj
+++ b/WineShop/WineShop.csproj
@@ -25,6 +25,7 @@
     <Folder Include="Migrations\" />
     <Folder Include="Views\OrderStatus\" />
     <Folder Include="Views\ProductType\" />
+    <Folder Include="wwwroot\images\product\" />
   </ItemGroup>
 
 </Project>
