Search bar for products implemented and detail page is added to website

--- a/WineShop/appsettings.json
+++ b/WineShop/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-2T2FUK2;Database=WineShop;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=CLAVERIN_PC;Database=WineShop;Trusted_Connection=True;MultipleActiveResultSets=True"
     //"DefaultConnection": "Server=(LocalDb)\MSQLLocalDB;Database=WineShop;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
