--- a/WineShop/WineShop.csproj
+++ b/WineShop/WineShop.csproj
@@ -27,6 +27,7 @@
     <Folder Include="Migrations\" />
     <Folder Include="Views\OrderStatus\" />
     <Folder Include="Views\ProductType\" />
+    <Folder Include="wwwroot\images\user\" />
     <Folder Include="wwwroot\images\product\" />
   </ItemGroup>
 
